--- a/src/main/resources/templates/categories/list.html
+++ b/src/main/resources/templates/categories/list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+너    <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
