--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,6 +13,7 @@
                 <a th:href="@{/admin/products}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.products}">상품관리</a>
                 <a th:href="@{/admin/categories}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.categories}">카테고리관리</a>
                 <a th:href="@{/admin/suppliers}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium" th:text="#{nav.suppliers}">공급업체관리</a>
+                <a th:href="@{/admin/orders}" class="px-4 py-2 text-gray-600 hover:text-blue-600 font-medium">주문관리</a>
             </div>
 
             <!-- 바이어 메뉴 -->
