--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,12 @@
             <a th:href="@{/posts}" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-lg font-medium" th:text="#{main.goto.posts}">
                 게시판 보러가기
             </a>
+            <a th:href="@{/fetch/auth/login}" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-lg font-medium" th:text="#{main.goto.fetch.login}">
+                fetch 로그인
+            </a>
+            <a th:href="@{/axios/auth/login}" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-lg font-medium" th:text="#{main.goto.axios.login}">
+                axios 로그인
+            </a>
         </section>
     </div>
 </body>
