클라이언트 페이지 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,9 @@
             <a th:href="@{/axios/auth/login}" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-lg font-medium" th:text="#{main.goto.axios.login}">
                 axios 로그인
             </a>
+            <a th:href="@{/pages/auth/login}" class="px-6 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 text-lg font-medium">
+                🔐 JWT 토큰 저장 방식 체험
+            </a>
         </section>
     </div>
 </body>
